@@ -18,5 +18,6 @@ define("REGAlREADY", "It appears you already have an account. Please check Your 
 define ( "SUCCESS_UPDATE_USER", " The user has been succesfully updated");
 define ( "SUCCESS_ADD_USER", " The user has been succesfully Added. Redirecting to login");
 define("LOGOUT", " The user has been succesfully Logged out");
+define("MISMATCH", " The details do not match. Please Correct and try again");
 
 ?>
